src/assets/css/style.css
/* ... */
    .form-group .input-field, .form-group textarea::placeholder{
        font-weight: bold;
    }
    .form-group .error-feedback{
        position: relative;
        color: red;
        margin-bottom: 0.5rem;
        /* font-weight: var(--fontWeightLight); */
    }
    .form-group .error-feedback small{
        position: absolute;
        /* background-color: lightgreen; */
    }
    .contact-form .btn-send{
        padding: 0.6rem;
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 11px;
        
        transition: background-color ease-in-out 0.3s;
        border: 1px solid gray;
        font-weight: var(--fontWeightBold);
        margin-top: 0.5rem;

        background-color: var(--bgColorSecondary);
        color: white;
        border: 1px solid white;
       
    }
    /* .contact-form .btn-send:hover{
        background-color: transparent;
        color:var(--bgColorSecondary) ;
        border: 1px solid var(--bgColorSecondary);
    } */
    #btn-loading{
        
    width: 26px;
    margin-left: 1.618rem;
    visibility:hidden;

    }
    /* social sectio  */
    .social::before{
        content: ">";
        position: absolute;
        top: 50%;
        left: 0;
        font-size: 25px;
        font-family: monospace;
        font-weight: 900;
        color: white;
        transform: translateY(-50%);
        line-height: 45px;
        padding: 0.2rem;

    }
    .social {
        padding: 0 0.9rem;
        position: relative;
        background: linear-gradient(to right bottom, hsl(236, 50%, 50%), hsl(195, 50%, 50%));
        border-top-left-radius: 2px;
        border-bottom-left-radius: 2px;
        position: fixed;
        top: 40%;
        right: 0;
        box-shadow: var(--boxShadow);
        transform: translateX(75%);
        transition: transform ease-in-out 0.3s;
    }
    .social:hover{
        transform: translateX(0%);
    }
    .social .container{
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        padding: 1rem 0.3rem;
        gap: 1rem;
        z-index: 100;
    }
    .social .container img{
        width: 32px;
    }
    /* footer section  */
    footer{
        padding: 1.3rem;
        background-color: whitesmoke;
        display: flex;
        justify-content: center;
    }
    footer .container{
        text-align: center;
        font-weight: 100;
    }
     /* modal */


/* responsive for tablet  */
@media screen and (max-width:720px) {
    body{
        overflow-x: hidden;
    }
    .navigation{
        top: 100%;
        padding: 1.5rem 1.3rem;
    }
    .navigation .menu-icon{
        display:inline-block;
    }
    .navigation h1{
        font-size: 1rem;
    }
    .navigation .menu {
        z-index: 1;
    width: 50%;
    padding: 1.5rem 0;
    background: #EEE;
    position: absolute;
    /* border-radius: 5px; */
    top: 79px;
    right: 0;
    text-align: center;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
    }
    .navigation .menu .link-item{
        margin: 8px;
        display: block;
    }
    .navigation .show{
        transform: translateX(0);
    }
    /* section hero  */
    .hero{
        padding: 1.5rem;
    }
    .hero .container{
        flex-direction: column;
        gap:3rem;
    }
    .hero .container .hero-img{
        max-width: 100%;
    }
    /* section more about me  */
    .more-about{
        padding: 1.5rem;
    }
    .more-about .container{
        flex-direction: column-reverse;
        gap:3rem;
    }
    .more-about .container .more-about-img{
        max-width: 100%;
    }
    /* section services  */
    .features{
        padding: 0 1.5rem;
    }
    .features .container{
        gap:3rem;
    }
    .feature{
        padding: 1rem;
        width: 20rem;
    }
    /* section skill  */
    .skills{
        padding: 1rem;
    }
    .skills .icon-card{
        width: 5rem;
        height: 5rem;
    }
    .skills .skills-warpper{
        padding: 0.5rem;
    }
    .projects{
        padding:1.5rem
    }
    .projects .contianer{
        padding:3rem 0 ;
    }
    .projects .contianer .project-card{
        padding: 15px;
        margin: 15px;
        max-width: 15rem;
        height: 370px;
    }
    .project-card .project-img{
        width: 13rem;
        height: 8rem;
    }
    /* section contact  */
    .contact{
        padding: 1.5rem;
    }
    .contact .container{
        padding: 1.5rem 0 1.5rem;
    }
    .contact .contact-form{
        width: 100%;
        padding: 1.5rem;
    }
    .form-group .input-field{
        margin: 0.3rem 0;
    }
    
}
 /* Loader for all Site  */
 #loader {
    border: 12px solid lightcyan;
    border-radius: 50%;
    border-top: 12px solid #0057ff9e;
    width: 70px;
    height: 70px;
    animation: spin 1.3s linear infinite;
}
  
@keyframes spin {
    100% {
        transform: rotate(360deg);
    }
}
  
.center {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

